<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    <!--Gases-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="10dp"

        >
        <TextView
            android:text="Pollutants"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/gas_1"
            android:text="@string/gas_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/gas_2"
            android:text="@string/gas_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/gas_3"
            android:text="@string/gas_3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/gas_4"
            android:text="@string/gas_4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/gas_5"
            android:text="@string/gas_5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/gas_6"
            android:text="@string/gas_6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/gas_7"
            android:text="@string/gas_7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/gas_8"
            android:text="@string/gas_8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
    </LinearLayout>
    <!--Concentrations-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="10dp">
        <TextView
            android:text="PPM"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/gas_value_1"
            android:text="50"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/gas_value_2"
            android:text="100"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/gas_value_3"
            android:text="150"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/gas_value_4"
            android:text="70"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/gas_value_5"
            android:text="90"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/gas_value_6"
            android:text="400"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/gas_value_7"
            android:text="350"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/gas_value_8"
            android:text="200"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
    </LinearLayout>

</LinearLayout>